--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 build/
 FakeSMTP.xcodeproj/jstanden.*
+FakeSMTP.xcodeproj/xcuserdata/zurielbarron.*
+FakeSMTP.xcodeproj/project.xcworkspace/xcuserdata/zurielbarron.*
